[metadata]
name = joblib-progress
version = attr: joblib_progress.__version__
description = A contextmanager to track progress of joblib execution
author = Jonghwan Hyeon
author_email = jonghwanhyeon93@gmail.com
url = https://github.com/jonghwanhyeon/joblib-progress
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    joblib
    progress
    rich
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
install_requires =
    joblib
    rich
python_requires = >=3.7
packages = find: